Ajuste para usar LinkedList